[package]
name = "ground-control"
version = "0.1.0"
edition = "2021"

[dependencies]
anise = "0.5.3"
anyhow = "1.0.96"
base16ct = {version = "0.2.0", features = ["alloc"]}
bytes = "1.10.0"
dotenvy = "0.15.7"
flate2 = "1.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
hifitime = {version = "4.0.2", features = ["std"]}
regex = "1.11.1"
reqwest = {version = "0.12.12", features=["stream", "rustls-tls"]}
restate-sdk = { version = "0.3.2", path = "../sdk-rust" }
rkyv = "0.8.10"
rusty-s3 = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
sha2 = "0.10.8"
sp3 = { git = "https://github.com/kpwebb/sp3.git", version = "1.1.1", features = ["flate2"]}
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version ="1.13.1", features = ["v5"]}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator =  "0.6"

[dev-dependencies]
restate-sdk-test-env = { path = "../sdk-rust/test-env" }
