[package]
name = "cddis-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenvy = "0.15.7"
futures-util = "0.3.31"
ground-control = { version = "0.1.0", path = "../ground-control" }
hifitime = "4.0.2"
regex = "1.11.1"
reqwest = {version = "0.12.14",  features=["stream", "multipart", "rustls-tls"]}
restate-sdk = {path = "../../sdk-rust" }
rusty-s3 = "0.7.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
dotenvy = "0.15.7"
restate-sdk-test-env = { path = "../../sdk-rust/test-env" }
