[package]
name = "cddis-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenvy = "0.15.7"
futures-util = "0.3.31"
ground-control = { version = "0.1.0", path = "../ground-control" }
hifitime = "4.0.2"
object_store = {version = "0.12.0", features = ["aws"]}
reqwest = {version = "0.12.14",  features=["stream", "multipart", "rustls-tls", "json"]}
restate-sdk = { version = "0.4.0", path = "../../sdk-rust" }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator =  "0.6"

[dev-dependencies]
dotenvy = "0.15.7"
restate-sdk-test-env = { path = "../../sdk-rust/test-env" }
